# DigitRecognizerGame

./: README.md  button.py  cell.py  check_event_functions.py  clear_button.py  click_button_functions.py  draw_button.py  erase_button.py  game_state.py  grid.py  grid_button.py  main.py  prediction_window.py  pyproject.toml  settings.py  submit_button.py  train_model.py
classes/: button.py  cell.py  erase_button.py  grid_button.py  submit_button.py
mnist_model.model/: saved_model.pb
mnist_model.model/variables/: variables.data-00000-of-00001  variables.index
src/: check_event_functions.py  clear_button.py  draw_button.py  grid.py  model.py  settings.py  train_model.py
