[project]
name = "digit recognizer game"
version = "0.1.0"
description = "A simple game that lets you draw a digit and will then predict what digit you drew"
authors = [
    {name = "Jamie Collier",email = "jamesdcollier89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    pygame,
    numpy,
    tensorflow
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
